add loading for save + fix solved riddle inside canvas

--- a/client/src/client/riddle/Canvas.scss
+++ b/client/src/client/riddle/Canvas.scss
@@ -23,6 +23,11 @@
             //     color: green;
             // }
 
+            &.loading {
+                transition: color 0.5s ease;
+                color: lightsteelblue;
+            }
+
             display: initial;
         }
     }
